test/typeerrors/ex12.act
actor main(env):
    env.exit()
    
